# nmarton818

./: README.md
practice/: CMakeLists.txt  main.c
practice-fileio/: CMakeLists.txt  functions.c  functions.h  main.c
project-0/: main.c
week-01/day-02/: CMakeLists.txt
week-01/day-02/ex-01/: CMakeLists.txt  main.cpp
week-01/day-02/ex-02/: CMakeLists.txt  main.cpp
week-01/day-02/ex-03/: CMakeLists.txt  main.cpp
week-01/day-02/ex-04/: CMakeLists.txt  main.cpp
week-01/day-02/ex-05/: CMakeLists.txt  main.cpp
week-01/day-02/ex-06/: CMakeLists.txt  main.cpp
week-01/day-02/ex-07/: CMakeLists.txt  main.cpp
week-01/day-02/ex-08/: CMakeLists.txt  main.cpp
week-01/day-02/ex-09/: CMakeLists.txt  main.cpp
week-01/day-02/ex-10/: CMakeLists.txt  main.cpp
week-01/day-02/ex-11/: CMakeLists.txt  main.cpp
week-01/day-02/ex-12/: CMakeLists.txt  main.cpp
week-01/day-02/ex-13/: CMakeLists.txt  main.cpp
week-01/day-02/ex-14/: CMakeLists.txt  main.cpp
week-01/day-02/ex-15/: CMakeLists.txt  main.cpp
week-01/day-02/ex-16/: CMakeLists.txt  main.cpp
week-01/day-02/ex-17/: CMakeLists.txt  main.cpp
week-01/day-02/ex-18/: CMakeLists.txt  main.cpp
week-01/day-02/ex-19/: CMakeLists.txt  main.cpp
week-01/day-02/ex-20/: CMakeLists.txt  main.cpp
week-01/day-02/ex-21/: CMakeLists.txt  main.cpp
week-01/day-02/ex-22/: CMakeLists.txt  main.cpp
week-01/day-02/ex-23/: CMakeLists.txt  main.cpp
week-01/day-02/ex-24/: CMakeLists.txt  main.cpp
week-01/day-02/ex-25/: CMakeLists.txt  main.cpp
week-08/day-01-dojo/poker/poker_test/: CMakeLists.txt  poker_test.cpp
(+439 files in other folders)
